--- a/style.css
+++ b/style.css
@@ -9,8 +9,66 @@
 body {
     font-family: 'Lexend Deca', sans-serif;
     background-color: hsl(0, 0%, 95%);
+    font-weight: 400;
 }
 .card-header {
     font-family: 'Big Shoulders', sans-serif;
     font-size: 1.5rem;
+    text-transform: uppercase;
+    padding-bottom: 25px;
+}
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    padding: 70px 20px
+}
+.card1, .card2, .card3 {
+    /* background-color: white; */
+    width: 300px;
+    padding: 20px;
+    text-align: flex-start;
+}
+.card1 {
+    background-color: #e38826;
+    color: #ffffff;
+}
+.card2 {
+    background-color: #006970;
+    color: #ffffff;
+}
+.card3 {
+    background-color: #004241;
+    color: #ffffff;
+}
+.card-img {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.card-body {
+    font-size: 1rem;
+    line-height: 1.5;
+    padding-bottom: 90px;
+    width: 90%;
+}
+.card-footer {
+    padding-bottom: 20px;
+}
+.card-footer button {
+    background-color: hsl(0, 0%, 100%);
+    padding: 15px 20px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: 700;
+}
+.card1 button {
+    color: #e38826;
+}
+.card2 button {
+    color: #006970;
+}
+.card3 button {
+    color: #004241;
 }
